# rust-practice

./: README.md
closures/src/: main.rs  p.rs
common/src/: main.rs
enumpattern/src/: main.rs
generic/src/: main.rs
iterator/src/: lib.rs  main.rs
lifetimes/src/: main.rs
minigrep/src/: lib.rs  main.rs
my-library/src/: lib.rs  main.rs
ownership/src/: main.rs
patternmatching/src/: main.rs
rand/src/: main.rs
rest-api/: Cargo.toml
rest-api/src/: main.rs
rest-api/src/config/: sqlite.rs
rest-api/src/controller/: user_controller.rs
rest-api/src/entity/: user_entity.rs
rest-api/src/model/: user_model.rs
rest-api/src/repository/: mod.rs  user_repository.rs  user_repository_impl.rs
rest-api/src/service/: user_service.rs  user_service_impl.rs
structlang/: Cargo.toml
structlang/src/: main.rs  main1.rs
traitrust/: Cargo.toml
traitrust/src/: lib.rs  main.rs
