[package]
name = "rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.1", features = ["sqlite","runtime-tokio"] }
tide = "0.16"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.79"
serde = "1.0.183"
uuid = "1.4.1"
async-trait = "0.1.59"
